--- a/templates/index.html
+++ b/templates/index.html
@@ -2,14 +2,16 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <link rel="stylesheet" href="static/style.css">
     <title>Document</title>
 </head>
 <body>
     <h1>Hello World!! {{nome_pessoa}} </h1>
     <p> agora escreve um paragrafo de texto</p>
     <ul>
-    <li> item 1</li>
-    <li> item 2 </li>
+    {% for item in lista %}
+    <li> {{ item }}</li>
+    {% endfor %}
     </ul>
     <h2 style="color: green;"> Mudei</h2>
 </body>
